WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173709
[WPE] Downloads never have a web view associated in WPE
https://bugs.webkit.org/show_bug.cgi?id=173709
Summary
[WPE] Downloads never have a web view associated in WPE
Carlos Garcia Campos
Reported
2017-06-22 04:04:00 PDT
PageClientImpl::handleDownloadRequest is not implemented in WPE. This causes some failures in the download unit tests: TEST: bin/TestWebKitAPI/WPE/TestDownloads... (pid=20583) /wpe/Downloads/local-file: OK /wpe/Downloads/overwrite-destination-allowed: OK /wpe/Downloads/overwrite-destination-disallowed: OK /wpe/Downloads/local-file-error: OK /wpe/Downloads/remote-file: OK /wpe/Downloads/remote-file-error: OK /wpe/Downloads/policy-decision-download: ** ERROR:/home/cgarcia/src/git/gnome/WebKit-WPE/Tools/TestWebKitAPI/Tests/WebKitGLib/TestDownloads.cpp:621:void testPolicyResponseDownload(PolicyResponseDownloadTest*, gconstpointer): assertion failed: (test->m_webView == webkit_download_get_web_view(test->m_download.get())) FAIL GTester: last random seed: R02Sa8d9d000d6db4269850e6c1f4a34d47c (pid=20692) /wpe/Downloads/policy-decision-download-cancel: ** ERROR:/home/cgarcia/src/git/gnome/WebKit-WPE/Tools/TestWebKitAPI/Tests/WebKitGLib/TestDownloads.cpp:640:void testPolicyResponseDownloadCancel(PolicyResponseDownloadTest*, gconstpointer): assertion failed: (test->m_webView == webkit_download_get_web_view(test->m_download.get())) FAIL GTester: last random seed: R02S8a053b0c2c679fe83edfdde89d0606b7 (pid=20727) /wpe/Downloads/mime-type: OK /wpe/WebKitWebView/download-uri: ** ERROR:/home/cgarcia/src/git/gnome/WebKit-WPE/Tools/TestWebKitAPI/Tests/WebKitGLib/TestDownloads.cpp:568:void testWebViewDownloadURI(WebViewDownloadTest*, gconstpointer): assertion failed: (test->m_webView == webkit_download_get_web_view(download.get())) FAIL GTester: last random seed: R02Sa218af78bd296a6c027f85e8642edab9 (pid=20771) FAIL: bin/TestWebKitAPI/WPE/TestDownloads
Attachments
Patch
(11.74 KB, patch)
2017-06-22 04:08 PDT
,
Carlos Garcia Campos
zan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2017-06-22 04:08:21 PDT
Created
attachment 313609
[details]
Patch
Carlos Garcia Campos
Comment 2
2017-06-22 04:55:17 PDT
Committed
r218691
: <
http://trac.webkit.org/changeset/218691
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug