Source/WebKit2/UIProcess/API/wpe/PageClientImpl.cpp
@@ -112,8 +112,10 @@ void PageClientImpl::didCommitLoadForMainFrame(const String&, bool)
 {
 }
 
-void PageClientImpl::handleDownloadRequest(DownloadProxy*)
+void PageClientImpl::handleDownloadRequest(DownloadProxy* download)
 {
+    ASSERT(download);
+    m_view.handleDownloadRequest(*download);
 }
 
 void PageClientImpl::didChangeContentSize(const WebCore::IntSize&)
